Feat: Add CPE-actions
- Clean up codebase
